Fix select layout issue

--- a/source/stylesheets/form-markup/forms.css
+++ b/source/stylesheets/form-markup/forms.css
@@ -10,6 +10,9 @@ legend {
   font-weight:bold;
   color:green;
 }
+select {
+  margin-left:1px;
+}
 
 
 .form__item {
